# protest-impact

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookies.json  pyproject.toml  setup.py
.github/workflows/: publish.yaml
data/destatis/: LICENSE
data/diva-gis/: .gitignore
data/fragdenstaat/: münchen.xlsx
data/hans-bredow-institut/: LICENSE
data/mediacloud/: .gitignore  LICENSE
data/news/: .gitignore  article_lengths.csv  german_newspapers.json  monthly_counts.csv  monthly_counts_prelim.csv.old  scrapable_mediacloud_newspapers.json  scrapable_mediacloud_newspapers_v1.json
data/nexis/: LICENSE
data/protest/: .gitignore  protest-stats-overview.yaml  protest_news_annotated_v1.jsonl  protest_news_attempt_1.jsonl  protest_news_attempt_2.jsonl  protest_news_shuffled_v2_sample_with_positive_predictions_annotated.jsonl
data/regionalatlas-statistikportal/: B-2011-AI-Z2-2011--AI-Z11--2023-04-19.csv  B-2021-AI002-1-5--AI0201--2023-04-19.csv  B-2021-AI002-2-5--AI0203--2023-04-19.csv  B-2021-AI002-2-5--AI0207--2023-04-19.csv  B-2021-AI003-2--AI0305--2023-04-19.csv  B-2021-AI005--AI0501--2023-04-19.csv  B-2021-AI005--AI0503--2023-04-19.csv  B-2021-AI005--AI0504--2023-04-19.csv  B-2021-AI005--AI0505--2023-04-19.csv  B-2021-AI005--AI0506--2023-04-19.csv  B-2022-AI-N-08-01--AI1301--2023-04-19.csv  LICENSE
datasets/: README.md  ali20223_extern.csv  berlin1.xlsx  berlin2.xlsx  demo_counts_de.numbers  dereko_corpora.csv
datasets/glpn_v1.1/: README.md  glpn_dev.csv  glpn_test-loc.csv  glpn_test-time.csv  glpn_test.csv  glpn_train.csv
datasets/official-data/: overview.yaml
datasets/statista/: statistic_id154154_visits-der-nachrichtenportale-in-deutschland-im-november-2022.xlsx  statistic_id165258_reichweite-von-nachrichtenwebsites-in-deutschland-im-september-2022.xlsx
docker/: Dockerfile  start.sh
docs/: Makefile  conf.py  index.rst  make.bat
docs/notes/: .gitignore  01-16.ipynb  01-21-data-exploration.ipynb  01-21.ipynb  01-23-berlin-protest-data.ipynb  01-23.ipynb  01-24.ipynb  01-26.ipynb  01-27.ipynb  01-28-glpn-flant5.ipynb  01-28.ipynb  01-30.ipynb  01-31.ipynb  02-02.ipynb  02-03-aglpn.ipynb  02-03.ipynb  02-04-prodigy-postprocess.ipynb  02-04.ipynb  02-06-1.ipynb  02-06-aglpn-fixes.ipynb  02-06-aglpn-gelectra.ipynb  02-06.ipynb  02-07-00.ipynb  02-07-aglpn-gelectra.ipynb  02-07.ipynb  02-08.ipynb  02-11.ipynb  02-12-protest-event-training.ipynb  02-12-topic-stats.ipynb  02-12.ipynb  02-13-association.ipynb  02-13-protest-vs-topic.ipynb  02-14-distributions.ipynb  02-15.ipynb  02-17-acled.ipynb  02-18-dpa.ipynb  02-21.ipynb  colab.md  data.qmd  data_exploration.qmd  (+207 more)
models/: .gitignore
models/propensity_scores/: trainer_state.json
models/regression/: lasso_params.json  ols_params.json  ridge_params.json
models/synthetic_control/: params.json
notebooks/: 4-regression.ipynb  5-instrumental_variable.ipynb  cumulative.ipynb  gprep.ipynb  instrumental_variable.ipynb  propensity.ipynb  propensity_text.ipynb  size_vs_impact.ipynb  synthetic_control.ipynb  transformer.ipynb  wip.ipynb
protest_impact/: gpu.md  test.py  types.py
protest_impact/data/: __init__.py  plot_history.py
protest_impact/instrumental_variables/: __init__.py  auto.py  changes.ipynb  changes.py  overview.md
protest_impact/naive/: before_after_diff.ipynb  protest_vs_topic.ipynb
protest_impact/results/: comparison.ipynb
protest_impact/synthetic_control/: __init__.py  data.py  hyperopt.py  model_configs.py  models.py  util.py
report/: .gitignore  0-report.qmd  1-introduction.qmd  12-appendix.qmd  2-1-gpreg-table.qmd  2-2-1-gpreg-table.qmd  2-2-gpreg.qmd  2-3-gprep.qmd  2-data.qmd  2-methods.qmd  3-1-overview-table.qmd  3-modeling.qmd  3-results.ipynb  3-results.qmd  4-discussion.qmd  4-naive.qmd  4-regression.qmd  5-1-placebo-tests.qmd  5-conclusion.qmd  5-instrumental-variable.qmd  5-synthetic-control.qmd  6-appendix1.ipynb  6-appendix1.qmd  6-instrumental-variable.qmd  6-synthetic-control.qmd  7-appendix2.qmd  7-propensity-scores.qmd  8-results.qmd  9-discussion.qmd  _quarto.yml  frontpage.qmd  gap.qmd  references.bib  report.qmd  titlepage.tex
src/: __init__.py  cache.py  paths.py
(+299 files in other folders)
