[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protest_impact"
version = "0.1.0"
description = ""
authors = ["David Pomerenke <davidpomerenke@mailbox.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "protest_impact"}]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.2.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
faker = "^15.3.4"
pandas = "^1.5.2"
seaborn = "^0.12.1"
readability-lxml = "^0.8.1"
html2text = "^2020.1.16"
python-dateutil = "^2.8.2"
altair = "^4.2.0"
tqdm = "^4.64.1"
holidays = "^0.18"
openpyxl = "^3.0.10"
statsmodels = "^0.13.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.19.2"
pre-commit = "^2.20.0"
black = {extras = ["jupyter"], version = "^22.12.0"}
ipywidgets = ">=7.0 <8.0"

[tool.isort]
profile = "black"
